<resources>
    <string name="app_name">MOX</string>

    <!--tabLayout-->
    <string name="top_tab">Top</string>
    <string name="tech_tab">Technology</string>
    <string name="pro_tab">Programming</string>
    <string name="android_tab">Android Dev</string>
    <string name="web_tab">Web Dev</string>
    <string name="ios_tab">Ios Dev</string>
    <string name="ui_tab">Front End</string>
    <string name="ux_tab">UX Design</string>
    <string name="clean_tab">Working</string>
    <string name="agile_tab">Remotely</string>

    <!--actions-->
    <string name="background">Background</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="please_check_your_internet_connection">And if you are developer, you can put your great touch there :D</string>
    <string name="there_s_seems_an_error_we_try_to_fix_it_at_this_time">Check out the project repo to know how it works</string>
    <string name="github">Project repo</string>
    <string name="whoops">You have found a secret</string>

    <!--names-->
    <string name="medium">Medium</string>
    <string name="theverge">theverge</string>
    <string name="cnn">CNN</string>
    <string name="author">CNN editor\'s</string>

    <!--description-->
    <string name="article_image">Article Image</string>
    <string name="comma_image">Comma Image</string>

    <!--bottomNavigation-->
    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_videos">Videos</string>
    <string name="menu_saved">Favourite</string>
    <string name="menu_premium">Premium</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="article">Article</string>
    <string name="for_every">for every</string>
    <string name="moment">moment</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="open_in_tab">Open in tab</string>
    <string name="favourites">Favourites</string>

    <string name="pro_languages">languages</string>
    <string name="technology">Technology</string>
    <string name="science">Science</string>
    <string name="industry">Industry</string>
    <string name="culture">Culture</string>
    <string name="graphic_design">Graphic</string>
    <string name="works_life">Works</string>
    <string name="management">Management</string>
    <string name="development">Development</string>
    <string name="top_topics">Top Topics</string>
</resources>