<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet_no_internet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    android:background="@drawable/rounded_bottomsheet"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_105sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:contentDescription="@string/no_internet_connection"
            android:src="@drawable/ic_no_internet"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonNoInternet"
            android:layout_width="@dimen/_148sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_55sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:background="@drawable/rounded_button"
            android:text="@string/try_again"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/error_message_3_health" />

        <TextView
            android:id="@+id/error_bold_health"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp"
            android:text="@string/whoops"
            android:textAlignment="center"
            android:textColor="#CB000000"
            android:textSize="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/error_message_3_health"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_check_your_internet_connection"
            android:textAlignment="center"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/error_message_2_health" />

        <TextView
            android:id="@+id/error_message_2_health"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp"
            android:text="@string/there_s_seems_an_error_we_try_to_fix_it_at_this_time"
            android:textAlignment="center"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/error_bold_health" />
    </androidx.constraintlayout.widget.ConstraintLayout>
